# Covid19

.devcontainer/: devcontainer.json
Covid_19/: AI_Summary.py  main.py  pyproject.toml
Covid_19/Project/: Load.py
